# BOSS-BBS

./: README.md
BOSS/: BAUD.COM  BOSS.BAS  BOSS.TXT  BYE.TXT  COUNT.BAS  COUNTER  DATE  DL.BAT  DLHEAD.BAS  DLLOAD.TXT  DS.BAT  EVENT.BAT  EVENT.SAF  FASTCHAT.CAP  FASTCHAT.FC  FASTCHAT.HLP  FIND.BAS  FISH.BAT  FX.BAT  GETRID.BAS  HAPPY.BAT  HEADER.BBS  HELLO.TXT  INDEX.BBS  LAST.BAS  LASTCALL.BAK  LASTCALL.TXT  LASTREAD.BBS  LOCATE.BAS  MESSAGE.BBS  PACK.BAS  PURGE.BAS  QB.BAT  QWIK.BAT  RECOV.BAS  REMOTE.BAT  SRT.BAT  UL.BAT  ULHEAD.BAS  UPLOAD.TXT  (+3 more)
BOSS/BULLET/: DEMO.PAS  DS.DOC  NEAT.FOR  NET  NEW  S  STRCT.FIL
BOSS/FILE1/: DUMMIES.LZH  FILE.1  FILE.BBS  FILE.DES  FILE.IDX  STARWARS.HSC
BOSS/MENU/: A.ASC  ADDRESS  COOL.BAS  EDI.BAS  MENU-6.ANS  MENU0-1.ANS  MENU0-1.ASC  MENU0-2.ANS  MENU0-2.ASC  MENU0-4.ANS  MENU0-4.ASC  MENU0-5.ANS  MENU0-5.ASC  MENU0-6.ANS  MENU0-6.ASC  MENU0-9.ANS  MENU0-9.ASC  MENU0.MNU  MENU1-2.ANS  MENU1-2.ASC  MENU1-4.ANS  MENU1-4.ASC  MENU1-5.ANS  MENU1-5.ASC  MENU1-50.ANS  MENU1-9.ANS  MENU1-9.ASC  MENU1.MNU  MENU10-5.ASC  MENU10-9.ANS  MENU10.MNU  MENU11-5.ASC  MENU11-9.ANS  MENU11.MNU  MENU12-5.ANS  MENU12-5.ASC  MENU12.MNU  MENU13-6.ASC  MENU13-9.ANS  MENU13.MNU  (+106 more)
BOSS/QWIK/: 1.ASC  15.ANS  16.ANS  16.ASC  2.ANS  2.ASC  24.ANS  29.ANS  51.ANS  51.ASC  55.ANS  55.ASC  (+9 more)
BOSS/cpp/: CMakeLists.txt  boss.cpp  boss.h  console.cpp  console.h  editor.cpp  editor.h  fileio.cpp  fileio.h  files.cpp  files.h  main.cpp  menus.cpp  menus.h  messages.cpp  messages.h  serial.cpp  serial.h  sysop.cpp  sysop.h  timer.cpp  timer.h  users.cpp  users.h
(+9 files in other folders)
